tests/baselines/reference/forInStatement2(strict=true).errors.txt
forInStatement2.ts(2,15): error TS2407: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter, but here has type 'number'.
forInStatement2.ts(2,15): error TS2454: Variable 'expr' is used before being assigned.


==== forInStatement2.ts (2 errors) ====
    var expr: number;
    for (var a in expr) {
                  ~~~~
!!! error TS2407: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter, but here has type 'number'.
                  ~~~~
!!! error TS2454: Variable 'expr' is used before being assigned.
    }